--- a/src/app/add-link/add-link.component.html
+++ b/src/app/add-link/add-link.component.html
@@ -1,15 +1,15 @@
-<form #addLinks="ngForm" (ngSubmit)="onLinkSubmitted(addLinks.value)">
+<form [formGroup]="addLinksForm" (ngSubmit)="onLinkSubmitted()">
 	<div class="form-group">
 		<label>title</label>
-		<input type=text class="form-control" name="title" [ngModel]="titleDemo">
+		<input type=text class="form-control" name="title" formControlName="title">
 	</div>
 	<div class="form-group">
 		<label>url</label>
-		<input type=text class="form-control" name="url" [ngModel]="urlDemo">
+		<input type=text class="form-control" name="url" formControlName="url">
 	</div>
 	<div class="form-group">
 		<label>description</label>
-		<input type=text class="form-control" name="description" [ngModel]="descriptionDemo">
+		<input type=text class="form-control" name="description" formControlName="description">
 	</div>
 
 	 <button (submit)="onLinkSubmitted($event)">Add Links</button> 
